added body and formatted with one large section

--- a/mod3sol/css/styles.css
+++ b/mod3sol/css/styles.css
@@ -1,3 +1,10 @@
 .navbar-right{
-	
+	background-color: #CCE1E8;
+}
+
+#descriptions{
+	padding: 20px;
+	background-color: gray;
+	height: 2000px;
+	width: 95%;
 }
